# FJML

./: .clangd  .gitignore  FJML.h  LICENSE  Makefile  README.md  doxygen.conf  mainpage.dox
.github/workflows/: c-cpp.yml  static.yml
FJML/activations/: activations.cpp  activations.h
FJML/data/: data.h
FJML/layers/: dense.cpp  layers.cpp  layers.h  softmax.cpp
FJML/linalg/: linalg.h  tensor.h
FJML/loss/: loss.cpp  loss.h
FJML/mlp/: mlp.cpp  mlp.h
FJML/optimizers/: adam.cpp  optimizers.h  sgd.cpp
FJML/util/: linalg.h  types.h  util.h
examples/mnist/: main.cpp
include/: FJML.h
include/FJML/: activations.h  data.h  layers.h  linalg.h  loss.h  metrics.h  mlp.h  optimizers.h  tensor.h
src/: SGD.cpp  activations.cpp  adam.cpp  conv.cpp  data.cpp  dense.cpp  layers.cpp  linalg.cpp  loss.cpp  metrics.cpp  mlp.cpp  softmax.cpp  tensor.cpp
src/FJML/activations/: activations.cpp  activations.h
src/FJML/data/: data.cpp  data.h
src/FJML/layers/: dense.cpp  layers.cpp  layers.h  softmax.cpp
src/FJML/linalg/: linalg.h  tensor.h
src/FJML/loss/: loss.cpp  loss.h
src/FJML/mlp/: mlp.cpp  mlp.h
src/FJML/optimizers/: SGD.cpp  adam.cpp  optimizers.h
tests/: CMakeLists.txt  activations.h  layers.h  linalg.h  loss.h  metrics.h  mlp.h  optimizers.h  profile.cpp  tensor.h  test_activations.h  test_data.h  test_layers.h  test_linalg.h  test_loss.h  test_metrics.h  test_mlp.h  test_optimizers.h  test_tensor.h  tests.cpp
